--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,43 +3,46 @@
 @tailwind utilities;
 
 :root {
-  --primary: #EEEDEB;
-  --dark: #2F3645;
-  --secondary: #939185;
-  --accent: #E6B9A6;
+    --primary-color: #EEEDEB;
+    --dark-color: #2F3645;
+    --secondary-color: #939185;
+    --accent-color: #E6B9A6;
 }
 
 body {
-  color: var(--dark);
+  color: var(--dark-color);
 }
 
 
 @layer utilities {
   .bg-primary {
-    background-color: var(--primary);
+    background-color: var(--primary-color);
   }
 
   .bg-secondary {
-    background-color: var(--secondary);
+    background-color: var(--secondary-color);
   }
 
 
   .bg-dark {
-    background-color: var(--dark);
+    background-color: var(--dark-color);
   }
 
   .border-dark {
-    border-color: var(--dark);
+    border-color: var(--dark-color);
   }
 
   .text-secondary {
-    color: var(--secondary);
+    color: var(--secondary-color);
+  }
+  .text-dark {
+    color: var(--dark-color);
   }
   .text-accent {
-    color: var(--accent);
+    color: var(--accent-color);
   }
     .text-primary {
-      color: var(--primary);
+      color: var(--primary-color);
     }
 
 }
